# CPP-Ovinger

./: CMakeLists.txt  README.md
oving1/: CMakeLists.txt
oving1/include/: Temp.h
oving1/resources/: TempFile.txt
oving1/src/core/: Main.cpp
oving1/src/modules/: Temp.cpp
oving2/: CMakeLists.txt
oving2/include/: Quest1.h  Quest2.h  Quest3.h  Quest4.h  Quest5.h  Quest6.h
oving2/src/core/: Main.cpp
oving2/src/modules/: Quest1.cpp  Quest2.cpp  Quest3.cpp  Quest4.cpp  Quest5.cpp  Quest6.cpp
oving3/: CMakeLists.txt
oving3/include/: Circle.h  Commodity.h  Quest4.h
oving3/src/core/: Main.cpp
oving3/src/modules/: Circle.cpp  Commodity.cpp  Quest4.cpp
